# openphonic

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: default.yml
config/presets/: speech-cleanup.yml
docs/: local-verification.md
openphonic/: __init__.py  cli.py  main.py
openphonic/api/: routes.py
openphonic/config/: default.yml
openphonic/config/presets/: speaker-diarization.yml  speech-cleanup.yml  transcript-review.yml  vocal-isolation.yml
openphonic/core/: __init__.py  database.py  logging.py  settings.py
openphonic/pipeline/: __init__.py  config.py  deepgram.py  ffmpeg.py  preflight.py  runner.py  stages.py
openphonic/services/: cuts.py  jobs.py  retention.py  storage.py
openphonic/static/: styles.css
openphonic/templates/: artifact.html  cuts.html  index.html  job.html  speakers.html  speakers_edit.html  transcript.html  transcript_edit.html
tests/: test_api.py  test_cli.py  test_config.py  test_cuts.py  test_database.py  test_deepgram.py  test_diarization.py  test_ffmpeg.py  test_jobs.py  test_pipeline_smoke.py  test_preflight.py  test_retention.py  test_runner.py  test_settings.py  test_storage.py  test_transcription.py
